--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,6 @@ pandas
 seaborn
 matplotlib
 numpy
-sklearn.model_selection
-IPython.display.display_html
-sklearn.svm
-sklearn.metrics
-sklearn.model_selection.KFold 
-sklearn.model_selection.cross_val_score
-sklearn.linear_model.LogisticRegression
-IPython.display.display
+sklearn
+IPython
 ipywidgets
